2020-06-06  Akira Kakuto  <kakuto@w32tex.org>

	* readable.c, knj.c: /../, /./, \..\, \.\ should not exist
	in \\?\ form of absolute path.

2020-04-28  Akira Kakuto  <kakuto@w32tex.org>

	* readable.c, knj.c: Support very long input path name,
	longer than _MAX_PATH for Windows, if it really exists and
	input name is given in full-absolute path in a command line.
	(Windows only).

2020-04-10  Karl Berry  <karl@tug.org>

	* version.ac: now 6.3.3/dev since TL'20 is released.

2020-03-27  Karl Berry  <karl@tug.org>

	* TeX Live 2020.

2020-02-29  Karl Berry  <karl@freefriends.org>

	* pathsearch.c: doc fix.
	
	* doc/unixtex.texi: update urls, typos, etc.

2020-01-19  Karl Berry  <karl@freefriends.org>

	* kpsewhich.c (ENSURE_NONEMPTY_STRING): new macro.
	(read_command_line): ensure nonempty arguments to --format,
	--safe-{in,out}-name, --var-brace-value, --var-value.
	Empty args to the other options seem possible.

	* line.c (read_line): silently drop nul (zero) bytes.
	* tests/cnfnull.test: test for nul bytes in texmf.cnf.
	* Makefile.am (TESTS),
	(tests/cnfnull.test): add it.

2020-01-16  Karl Berry  <karl@freefriends.org>

	* doc/kpathsea.texi,
	* version.ac (kpse_dev): no /dev.

2019-12-31  Akira Kakuto  <kakuto@w32tex.org>

	* access.c: not test x bit on Windows, because access() crashes.

2019-12-29  Karl Berry  <karl@tug.org>

	* mktexlsr,
	* mktexmf,
	* mktexpk,
	* mktextfm: remove; these will now be maintained only in
	Master/texmf-dist/scripts/texlive, with slave copies in
	Build/source/texk/texlive/linked_scripts as usual.
	* Makefile.am (dist_noinst_SCRIPTS): remove, nothing left.
	(install-exec-local): likewise remove.
	(uninstall-local): don't uninstall the dist_noinst_SCRIPTS.
	(bin_links): remove, now also handled in linked_scripts.
	
	* man/Makefile.am (man_sources): remove mktex{lsr,mf,pk,tfm}.man;
	(man1_links): remove; these man pages will now be maintained in
	Build/source/texk/texlive/tl_scripts.

2019-12-26  Karl Berry  <karl@tug.org>
