@@ -1,6 +1,6 @@
 /* tex-make.c: run external programs to make TeX-related files.
 
-   Copyright 1993, 1994, 1995, 1996, 1997, 2008-2013, 2018 Karl Berry.
+   Copyright 1993, 1994, 1995, 1996, 1997, 2008-2020 Karl Berry.
    Copyright 1997, 1998, 2001-05 Olaf Weber.
 
    This library is free software; you can redistribute it and/or
@@ -417,7 +417,11 @@ maketex (kpathsea kpse, kpse_file_format_type format, string* args)
 
 
 /* Create BASE in FORMAT and return the generated filename, or
-   return NULL.  */
+   return NULL.  We used to emit warnings for names we declined to pass
+   on to the scripts, but such names are common with system fonts, so
+   now we are silent (just returning NULL).  That is arguably better
+   behavior anyway.  Presumably the caller always reports "font not
+   found" anyway.  */
 
 string
 kpathsea_make_tex (kpathsea kpse, kpse_file_format_type format,
@@ -440,17 +444,18 @@ kpathsea_make_tex (kpathsea kpse, kpse_file_format_type format,
     int argnum;
     int i;
 
-    /* FIXME
-     * Check whether the name we were given is likely to be a problem.
-     * Right now we err on the side of strictness:
-     * - may not start with a hyphen (fixable in the scripts).
-     * - allowed are: alphanumeric, underscore, hyphen, period, plus
-     * ? also allowed DIRSEP, as we can be fed that when creating pk fonts
-     * No doubt some possibilities were overlooked.
-     */
+    /* Check whether the name we were given is likely to be a problem.
+       All could be fixed in the scripts and/or invocation, but in
+       practice our names are simple, so let's err on the side of strictness:
+       - may not start with a hyphen
+       - allowed are: alphanumeric, underscore, hyphen, period, plus
+       - also allowed: DIRSEP, as we can be fed that when creating pk fonts
+       
+       For example, system fonts are likely to contain spaces, and
+       (for filename lookups) be enclosed in square brackets.  We don't
+       want to try calling our mktex* scripts on those.
+    */
     if (base[0] == '-' /* || IS_DIR_SEP(base[0])  */) {
-      fprintf(stderr, "kpathsea:make_tex: Invalid filename `%s', starts with '%c'\n",
-              base, base[0]);
       return NULL;
     }
     for (i = 0; base[i]; i++) {
@@ -461,8 +466,6 @@ kpathsea_make_tex (kpathsea kpse, kpse_file_format_type format,
           && base[i] != '.'
           && !IS_DIR_SEP(base[i]))
       {
-        fprintf(stderr, "kpathsea:make_tex: Invalid filename `%s', contains '%c'\n",
-                base, base[i]);
         return NULL;
       }
     }
